Added title to search page(profiles)

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, "Search") %>
+
 <div class="container">
 
   <script>
@@ -24,14 +26,6 @@
           document.getElementById("age2").innerText = secondSliderValue;
       }
   </script>
-
-
-
-
-
-
-
-
 
   <!-- Button trigger modal -->
   <button type="button" class="btn btn-outline-secondary d-grid gap-2 d-md-block mx-auto mb-4" data-bs-toggle="modal" data-bs-target="#exampleModal">
