--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -12,7 +12,7 @@
     });
 </script>
 
-<div id="chat_container" class="container my-4">
+<div class="container my-4">
   <div class="card" style="height: calc(100vh - 200px);">
     <div class="card-header d-flex justify-content-between align-items-center">
       <%= link_to 'Back to chats', chats_path, class: 'btn btn-outline-primary me-auto' %>
@@ -65,3 +65,33 @@
     </div>
   </div>
 </div>
+
+<script>
+    // Function to scroll to the bottom of the chat
+    function scrollToBottom() {
+        var messagesContainer = document.querySelector('.card-body');
+        messagesContainer.scrollTop = messagesContainer.scrollHeight;
+    }
+
+    // Scroll to the bottom when Turbo loads the page
+    document.addEventListener('turbo:load', scrollToBottom);
+
+    // MutationObserver to detect when new messages are added and scroll to bottom
+    var observer = new MutationObserver(function(mutations) {
+        mutations.forEach(function(mutation) {
+            if (mutation.addedNodes.length) {
+                scrollToBottom();
+            }
+        });
+    });
+
+    // Start observing the target node for configured mutations
+    observer.observe(document.getElementById('messages'), { childList: true, subtree: true });
+
+    // Disconnect the observer when it's no longer needed to prevent memory leaks
+    function disconnectObserver() {
+        observer.disconnect();
+    }
+
+
+</script>
