--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,5 +1,10 @@
-<% provide(:title, "Chat with #{@chat.receiver.username.capitalize}") %>
-<% content_for :h1, "Chat with #{@chat.receiver.username.capitalize}" %>
+<% if current_user == @chat.sender %>
+    <% provide(:title, "Chat with #{@chat.receiver.username.capitalize}") %>
+    <% content_for :h1, "Chat with #{@chat.receiver.username.capitalize}" %>
+  <% else %>
+    <% provide(:title, "Chat with #{@chat.sender.username.capitalize}") %>
+    <% content_for :h1, "Chat with #{@chat.sender.username.capitalize}" %>
+  <% end %>
 
 <script>
     document.addEventListener('turbo:submit-end', (event) => {
