--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -18,7 +18,7 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "Send message", class: "btn btn-primary" %>
+    <%= form.submit "Send message", class: "btn btn-outline-primary" %>
   </div>
 
 <% end %>
