Made some refactoring, message form improvement

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_link_tag "chats" %>
+
 <% if current_user == @chat.sender %>
     <% provide(:title, "Chat with #{@chat.receiver.username.capitalize}") %>
     <% content_for :h1, "Chat with #{@chat.receiver.username.capitalize}" %>
@@ -6,16 +8,7 @@
     <% content_for :h1, "Chat with #{@chat.sender.username.capitalize}" %>
   <% end %>
 
-<script>
-    document.addEventListener('turbo:submit-end', (event) => {
-        if (event.detail.success) {
-            const form = document.getElementById('new_message_form');
-            if (form) {
-                form.reset();
-            }
-        }
-    });
-</script>
+<script src="app/javascript/reset_message_form.js"></script>
 
 <div class="container my-4">
   <div class="card" style="height: calc(100vh - 200px);">
@@ -71,32 +64,4 @@
   </div>
 </div>
 
-<script>
-    // Function to scroll to the bottom of the chat
-    function scrollToBottom() {
-        var messagesContainer = document.querySelector('.card-body');
-        messagesContainer.scrollTop = messagesContainer.scrollHeight;
-    }
-
-    // Scroll to the bottom when Turbo loads the page
-    document.addEventListener('turbo:load', scrollToBottom);
-
-    // MutationObserver to detect when new messages are added and scroll to bottom
-    var observer = new MutationObserver(function(mutations) {
-        mutations.forEach(function(mutation) {
-            if (mutation.addedNodes.length) {
-                scrollToBottom();
-            }
-        });
-    });
-
-    // Start observing the target node for configured mutations
-    observer.observe(document.getElementById('messages'), { childList: true, subtree: true });
-
-    // Disconnect the observer when it's no longer needed to prevent memory leaks
-    function disconnectObserver() {
-        observer.disconnect();
-    }
-
-
-</script>
+<script src="app/javascript/chat_scripts.js"></script>
