--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @message, data: { turbo_frame: "new_message" }, id: 'new_message_form' do |form| %>
+<%= form_with model: @message, data: { turbo_frame: "new_message" }, id: 'new_message_form', local: false do |form| %>
   <% if @message.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@message.errors.count, "error") %> prohibited this message from being saved:</h2>
@@ -13,12 +13,11 @@
 
   <%= form.hidden_field :chat_id %>
 
-  <div class="form-group">
-    <%= form.text_area :content, rows: 5, class: "w-100"  %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit "Send message", class: "btn btn-outline-primary" %>
+  <div class="chat-input-container">
+    <%= form.text_area :content, rows: 1, class: "chat-textarea", placeholder: "Type your message here...", required: true, autofocus: true %>
+    <button type="submit" class="send-button">
+      <i class="fa-regular fa-paper-plane"></i>
+    </button>
   </div>
 
 <% end %>
