--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Profiles") %>
+<% provide(:title, "#{ @user.username.capitalize }") %>
 
 <h1><%= @user.username.capitalize + ", " %><%= @user.age %></h1>
 
@@ -26,9 +26,7 @@
       </div>
     </div>
     <div class="card mx-auto mb-3">
-      <button type="button" class="btn btn-outline-primary mb-1 col-6 d-md-block mx-auto mt-3" data-bs-toggle="modal" data-bs-target="#<%= @user.username %>">
-        Message
-      </button>
+      <%= link_to 'Send message', send_message_to_profile_path(@user.id), class: "btn btn-outline-primary mb-1 col-6 d-md-block mx-auto mt-3" %>
       <button type="button" class="btn btn-outline-primary mb-1 col-6 d-md-block mx-auto">Add to favorites</button>
       <button type="button" class="btn btn-outline-danger mb-1 col-6 d-md-block mx-auto">Block</button>
       <%= link_to "Back", request.referer, class: "btn btn-outline-primary mb-3 mt-5 col-3 mx-auto d-md-block" %>
@@ -36,33 +34,6 @@
   </div>
 </div>
 
-<!-- Modal for sending message start -->
-
-<div class="modal fade" id="<%= @user.username %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">New message
-          to <%= @user.username.capitalize %></h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="mb-3">
-            <label for="message-text" class="col-form-label">Message:</label>
-            <textarea class="form-control" id="message-text"></textarea>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send message</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Modal for sending message end -->
 
 
 
