--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -74,6 +74,12 @@
           </div>
 
           <hr>
+
+          <div class="form-group">
+            <%= f.label :name, "First Name" %>
+            <%= f.text_field :name, class: "form-control", :placeholder => "Enter your First Name" %>
+          </div>
+
           <div class="form-group">
             <%= f.label :bio, "Bio" %>
             <%= f.text_area :bio, class: "form-control", :placeholder => "This field is not required" %>
