--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Dashboard") %>
 
-<h1><%= "Hello, " + current_user.username.capitalize %></h1>
+<h1><%= "Hello, " + current_user.name.capitalize %></h1>
 
 <div class="row">
   <div class="col">
