--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -9,7 +9,7 @@
       <div>
         <!-- Username with comma, Date and Time in AM/PM format -->
         <div class="mb-1">
-          <%= link_to message.author.username.capitalize, "/profiles/#{message.author.id}", class: '', style: 'font-size: 1.2em; color: cornflowerblue; text-decoration: none;' %>
+          <%= link_to message.author.name.capitalize, "/profiles/#{message.author.id}", class: '', style: 'font-size: 1.2em; color: cornflowerblue; text-decoration: none;' %>
           <span class="text-muted" style="font-size: 0.75em;"><%= message.created_at.in_time_zone('Central Time (US & Canada)').strftime("%-d %b %Y, %l:%M %p") %></span>
         </div>
         <!-- Message Content and Delete Button on the same line -->
