--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -30,14 +30,14 @@
       <div class="row g-0 m-1">
         <div class="col-md-3">
           <%= link_to "profiles/#{profile.id}" do %>
-            <img src="<%= profile.avatar %>" alt="<%= profile.username.capitalize %>'s photo" class="img-fluid rounded-start rounded-end" style="max-width: 100%;">
+            <img src="<%= profile.avatar %>" alt="<%= profile.name.capitalize %>'s photo" class="img-fluid rounded-start rounded-end" style="max-width: 100%;">
 
         <% end %>
 
         </div>
         <div class="col-md-8">
           <div class="card-body m-3 text-center">
-            <h5 class="card-title"><%= profile.username.capitalize %>, <%= profile.age %></h5>
+            <h5 class="card-title"><%= profile.name.capitalize %>, <%= profile.age %></h5>
             <p class="card-text">
               <%= profile.country %>, <%= profile.state %>, <%= profile.city %>
             </p>
@@ -52,7 +52,7 @@
                   <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#<%= profile.id %>"><i class="fa-solid fa-eye" style="color: #585555;"></i>&nbsp;Quick
                     preview</a></li>
                 <li>
-                  <a class="dropdown-item" href="#" >"><i class="fa-regular fa-comment" style="color: #585555;"></i>&nbsp;Send a message</a></li>
+                  <a class="dropdown-item" href="#"><i class="fa-regular fa-comment" style="color: #585555;"></i>&nbsp;Send a message</a></li>
                 <li>
                   <a class="dropdown-item" href="profiles/<%= profile.id %>"><i class="fa-regular fa-address-card" style="color: #585555;"></i>&nbsp;See
                     full profile</a></li>
@@ -75,11 +75,11 @@
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h1 class="modal-title fs-1" id="exampleModalLabel"><%= profile.username.capitalize %></h1>
+                    <h1 class="modal-title fs-1" id="exampleModalLabel"><%= profile.name.capitalize %></h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
-                    <%= image_tag("#{profile.avatar}", alt: "#{profile.username.capitalize}'s photo", class: "img-fluid rounded-start rounded-end mx-auto") %>
+                    <%= image_tag("#{profile.avatar}", alt: "#{profile.name.capitalize}'s photo", class: "img-fluid rounded-start rounded-end mx-auto") %>
                   </div>
                   <div class="modal-footer justify-content-md-center">
 
