--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -52,7 +52,8 @@
                   <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#<%= profile.id %>"><i class="fa-solid fa-eye" style="color: #585555;"></i>&nbsp;Quick
                     preview</a></li>
                 <li>
-                  <a class="dropdown-item" href="#"><i class="fa-regular fa-comment" style="color: #585555;"></i>&nbsp;Send a message</a></li>
+                  <a class="dropdown-item" href="<%= send_message_path(profile.id) %>"><i class="fa-regular fa-comment" style="color: #585555;"></i>&nbsp;Send a message</a>
+                </li>
                 <li>
                   <a class="dropdown-item" href="profiles/<%= profile.id %>"><i class="fa-regular fa-address-card" style="color: #585555;"></i>&nbsp;See
                     full profile</a></li>
