Added functionality for user to have dashboard displayed info for chats and messages count

--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -33,9 +33,9 @@
         Info
       </div>
       <div class="card-body">
-        <p>Chats -</p>
-        <p>Messages sent -</p>
-        <p>Visitors -</p>
+        <p>Chats - <%= @chats_count %></p>
+        <p>Messages sent - <%= @messages_count %></p>
+        <p>Visitors - N/A </p>
       </div>
     </div>
 
