Made blocks working but half broken

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -55,17 +55,7 @@
                   <a class="dropdown-item" href="<%= send_message_path(profile.id) %>"><i class="fa-regular fa-comment" style="color: #585555;"></i>&nbsp;Send a message</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="profiles/<%= profile.id %>"><i class="fa-regular fa-address-card" style="color: #585555;"></i>&nbsp;See
-                    full profile</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"><i class="fa-solid fa-star" style="color: #02f740;"></i>&nbsp;Add to
-                    favorites</a></li>
-                <li>
-                  <a class="dropdown-item" href="#"><i class="fa-solid fa-lock" style="color: #f50505;"></i>&nbsp;Block</a>
-                </li>
+                  <a class="dropdown-item" href="profiles/<%= profile.id %>"><i class="fa-regular fa-address-card" style="color: #585555;"></i>&nbsp;See full profile</a></li>
               </ul>
             </div>
 
