--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -28,7 +28,15 @@
     <div class="card mx-auto mb-3">
       <%= link_to 'Send message', send_message_to_profile_path(@user.id), class: "btn btn-outline-primary mb-1 col-6 d-md-block mx-auto mt-3" %>
       <button type="button" class="btn btn-outline-primary mb-1 col-6 d-md-block mx-auto">Add to favorites</button>
-      <button type="button" class="btn btn-outline-danger mb-1 col-6 d-md-block mx-auto">Block</button>
+
+      <%= turbo_frame_tag 'block_button' do %>
+        <% if @is_blocked_by_current_user %>
+          <%= link_to 'Unblock', unblock_profile_path(@user), method: :delete, data: { turbo_method: :delete } %>
+        <% else %>
+          <%= link_to 'Block', block_profile_path(@user), method: :post, data: { turbo_method: :post } %>
+        <% end %>
+      <% end %>
+
       <%= link_to "Back", request.referer, class: "btn btn-outline-primary mb-3 mt-5 col-3 mx-auto d-md-block" %>
     </div>
   </div>
