--- a/app/views/profiles/block.turbo_stream.erb
+++ b/app/views/profiles/block.turbo_stream.erb
@@ -1,3 +1,5 @@
 <%= turbo_stream.replace 'block_button' do %>
-  <%= link_to 'Unblock', unblock_profile_path(@user), method: :delete, data: { turbo_method: :delete } %>
+  <%= link_to unblock_profile_path(@user), method: :delete, data: { turbo_method: :delete }, class: "btn btn-outline-primary mb-1 col-6 d-md-block mx-auto" do %>
+    Unblock
+  <% end %>
 <% end %>
