--- a/app/views/profiles/unblock.turbo_stream.erb
+++ b/app/views/profiles/unblock.turbo_stream.erb
@@ -1,3 +1,5 @@
 <%= turbo_stream.replace 'block_button' do %>
-  <%= link_to 'Block', block_profile_path(@user), method: :post, data: { turbo_method: :post } %>
+  <%= link_to block_profile_path(@user), method: :post, data: { turbo_method: :post }, class: "btn btn-outline-primary mb-1 col-6 d-md-block mx-auto" do %>
+    Block
+  <% end %>
 <% end %>
