--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -20,7 +20,7 @@
     </div>
 
     <div class="card mx-auto mb-3">
-      <div class="card-header">
+      <div class="card-header text-center">
         Bio
       </div>
       <div class="card-body">
@@ -29,13 +29,19 @@
     </div>
 
     <div class="card mx-auto mb-3">
-      <div class="card-header">
-        Info
+      <div class="card-header text-center">
+        Statistics
       </div>
       <div class="card-body">
-        <p>Chats - <%= @chats_count %></p>
-        <p>Messages sent - <%= @messages_count %></p>
-        <p>Visitors - N/A </p>
+        <h6>Chats - <%= @chats_count %></h6>
+        <hr>
+        <h6>Messages sent - <%= @messages_count %></h6>
+        <hr>
+        <span style="display: flex; justify-content: space-between;"><h6>Blocked users - <%= @blocked_users.count %></h6>
+          <a href="#" style="text-align: right;" data-bs-toggle="modal" data-bs-target="#staticBackdrop">details</a>
+        </span>
+        <hr>
+        <h6>Visitors - N/A </h6>
       </div>
     </div>
 
@@ -46,6 +52,31 @@
       <a href="<%= destroy_user_session_path %>" data-turbo-method="delete" class="btn btn-outline-primary mb-1 col-6 d-md-block mb-3 mx-auto">
         <i class="fa-solid fa-right-from-bracket" style="color: #585555;"></i>&nbsp;Sign out
       </a>
+    </div>
+  </div>
+</div>
+
+<!-- Modal for blocked users -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Blocked users</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <% @blocked_users.each do |user| %>
+         <p><% person =  User.where(:id => user.blocked_id)[0] %></p>
+          <%= link_to profile_path(person), class: "text-decoration-none" do %>
+            <img src="<%= person.avatar %>" class="rounded-circle" style="width: 50px; height: 50px;" alt="profile picture" />
+            <%= person.name.capitalize %>
+          <% end %>
+
+      <% end %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
     </div>
   </div>
 </div>
