--- a/app/views/blocks/index.html.erb
+++ b/app/views/blocks/index.html.erb
@@ -7,5 +7,6 @@
     <img src="<%= person.avatar %>" class="rounded-circle" style="width: 50px; height: 50px;" alt="profile picture" />
     <%= person.name.capitalize %>
   <% end %>
-
 <% end %>
+<%= will_paginate @blocked_users %>
+
