--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, "Chats") %>
 <% content_for :h1, 'My Chats' %>
 
+<%= stylesheet_link_tag "chats" %>
+
 <div class="container mt-4">
   <div class="row justify-content-center">
     <div class="col-md-8">
@@ -32,7 +34,7 @@
             <div class="d-flex align-items-center">
               <small class="text-muted me-3"><%= last_message.created_at.strftime("%d %b %Y at %I:%M %p") if last_message %></small>
               <%= link_to chat_path(chat), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this chat?' }, class: 'icon-link', title: 'Delete Chat' do %>
-                <i class="fa fa-trash text-danger"></i>
+                <i class="fa-regular fa-trash-can" style="color: #f80303;"></i>
               <% end %>
             </div>
           </div>
