Progress in blocks UI, chats UI, removed js for clearing form, it works now with turbo

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -23,7 +23,7 @@
                           method: :delete,
                           data: { turbo_method: :delete },
                           title: 'Delete Message' do %>
-                <i class="fa fa-trash text-danger"></i>
+                <i class="fa-regular fa-trash-can" style="color: #f80303;"></i>
               <% end %>
             </div>
           <% end %>
