--- a/app/views/blocks/index.html.erb
+++ b/app/views/blocks/index.html.erb
@@ -3,9 +3,9 @@
 
 <div class="container mt-4">
   <% @blocked_users.each do |user| %>
-    <div class="row mb-2">
+    <div class="row mb-2" id="<%= dom_id(user) %>">
       <div class="col-8 mx-auto">
-        <div class="card" id="<%= dom_id(user) %>">
+        <div class="card">
           <div class="card-body d-flex align-items-center">
             <%= link_to profile_path(user.blocked), class: "text-decoration-none" do %>
               <img src="<%= user.blocked.avatar %>" class="rounded-circle me-2" style="width: 50px; height: 50px;" alt="User Avatar">
@@ -23,6 +23,3 @@
   <% end %>
   <%= will_paginate @blocked_users, class: 'pagination justify-content-center' %>
 </div>
-
-
-
