--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -30,12 +30,12 @@
 
       <%= turbo_frame_tag "block_unblock_button" do %>
         <% if @is_blocked_by_current_user %>
-          <%= link_to unblock_profile_path(@user), data: { turbo_method: :delete, turbo_frame: "block_unblock_button" },remote: true, class: "btn btn-outline-primary mb-1 col-6 d-md-block mx-auto" do %>
-            <i class="fa-solid fa-lock-open" style="color: #0ad150;"></i>&nbsp;Unblock
+          <%= link_to unblock_profile_path(@user), data: { turbo_method: :delete, turbo_frame: "block_unblock_button" },remote: true, class: "btn btn-outline-success mb-1 col-6 d-md-block mx-auto" do %>
+            <i class="fa-solid fa-lock-open"></i>&nbsp;Unblock
           <% end %>
         <% else %>
-          <%= link_to block_profile_path(@user), data: { turbo_method: :post, turbo_frame: "block_unblock_button" },remote: true, class: "btn btn-outline-primary mb-1 col-6 d-md-block mx-auto" do %>
-            <i class="fa-solid fa-lock" style="color: #ff0000;"></i>&nbsp;Block
+          <%= link_to block_profile_path(@user), data: { turbo_method: :post, turbo_frame: "block_unblock_button" },remote: true, class: "btn btn-outline-danger mb-1 col-6 d-md-block mx-auto" do %>
+            <i class="fa-solid fa-lock"></i>&nbsp;Block
           <% end %>
         <% end %>
       <% end %>
